--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack-dev-server --open",
     "build": "webpack"
   },
-  "author": "Gonzalo Fleming",
+  "author": "Iván Carmona",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -27,17 +27,4 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gonzafg2/Template-Proyectos-No-VueJS.git"
-  },
-  "keywords": [
-    "babel",
-    "webpack"
-  ],
-  "bugs": {
-    "url": "https://github.com/gonzafg2/Template-Proyectos-No-VueJS/issues"
-  },
-  "homepage": "https://github.com/gonzafg2/Template-Proyectos-No-VueJS#readme"
-}
+  }
